# guerra-naval-app

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml
